--- a/notebooks/gcolab_find_en.ipynb
+++ b/notebooks/gcolab_find_en.ipynb
@@ -1049,12 +1049,14 @@
         "        int: Index of net list.\n",
         "    \"\"\"\n",
         "    while set < len(net):\n",
-        "        score = average([n[at] for n in net[:set]])\n",
+        "        print(\"Net =\", net[:set])\n",
+        "        print(\"Score =\", [n[at] for n in net[:set]][-1])\n",
+        "        score = [n[at] for n in net[:set]][-1]\n",
         "        if score>=fall:\n",
         "            fall=score\n",
         "            set+=1\n",
         "        else: break\n",
-        "    return set\n"
+        "    return set-1"
       ]
     },
     {
@@ -1139,6 +1141,60 @@
       ]
     },
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### The analysis pipeline.\n",
+        "##### The following code iterates through the files of the \"*connectivity_matrices*\" folder and loads the connectivity matrices of the WOI specified by the user. \n",
+        "###### The selected networks, based on the available connectivity measures, are saved as *rec* class objects in a subfolder called *selected_network*, as files with a custom extension (*RES*). \n",
+        "###### The filenames indicate the preprocessing parameters, matching the connectivity matrix filenames, as: \n",
+        "###### \"*SUB-preseizure5-CC-(70,180).res*\" if the signal was filtered, and\n",
+        "###### \"*SUB-preseizure5-PEC.res*\" if the signal was not filtered.\n",
+        "#### The saved file contains a dictionary, and under the key “*data*”, it saved *test_nets* and *nodes*, where\n",
+        "#### - *test_nets* contains a dictionary in which keys represent all tested network sized, and values contain a lists of sets, containing node group, node indices, CVSs and evaluation score (same format as in base); \n",
+        "#### - *nodes* contains a list of nodes representing the selected network."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from numpy import delete\n",
+        "\n",
+        "def exclude_from_cm(cm, channel_id):\n",
+        "    \"\"\"Excludes a node from a connectivity matrix.\n",
+        "    Arguments:\n",
+        "        cm (numpy array): 2D matrix with connectivity measures between all node pairs\n",
+        "        channel_id (int or list): index of the node to be removed\n",
+        "    Returns the updated matrix.\n",
+        "    \"\"\"\n",
+        "    cm = delete(cm, channel_id, 0)\n",
+        "    cm = delete(cm, channel_id, 1)\n",
+        "    return cm\n",
+        "\n",
+        "def exclude_from_sz_cm(cm_list, channel_id):\n",
+        "    \"\"\"Excludes a node from connectivity matrices of seizure epochs.\n",
+        "    Arguments:\n",
+        "        cm_list (list of numpy arrays): list of connectivity matrices saved in the PREP file under X;\n",
+        "                                        First half of the matrices are from seizure epochs, second half form basleine epochs.\n",
+        "        channel_id (int or list): index of the node to be removed\n",
+        "    Returns the updated list of matrices.\n",
+        "    \"\"\"\n",
+        "    result = []\n",
+        "    for i,cm in enumerate(cm_list):\n",
+        "      if i<(len(cm_list)/2):\n",
+        "        # Exclude the node only from seizure matrices, which are set as the first half in the list\n",
+        "        cm = exclude_from_cm(cm, channel_id)\n",
+        "        result.append(cm)\n",
+        "      else:\n",
+        "        result.append(cm)\n",
+        "    return result"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -1159,15 +1215,29 @@
         "from joblib import Parallel, delayed\n",
         "\n",
         "for file_cm in listdir(path_cm):\n",
-        "    print(\"Processing...\")\n",
+        "  if file_cm.split(\"-\")[1]==woi_code[woi]:\n",
+        "\n",
+        "    print(\"\\n--------------------------------------------------------------\")\n",
+        "    print(\"\\nProcessing...\")\n",
+        "\n",
         "    subject_id = file_cm.split(\"/\")[-1][0:3]\n",
         "    print(\"Connectivity matrices of\", file_cm)\n",
         "\n",
         "    cm = REc.load(path_cm + file_cm).data\n",
         "\n",
+        "    # For subject ASJ, for connectivity analysis using CC and SCR delta (WOI 2-5),\n",
+        "    # the seizure connectivity matrices have an extra channel that was not excluded;\n",
+        "    # The node was excluded from the labels list (nodes), therefore:\n",
+        "    # This block of code excludes the channel \"J9-J10\", with the index of the channel \"J10-J11\" in the current labels list.\n",
+        "    if subject_id==\"ASJ\" and (file_cm.split(\"-\")[2]==\"CC\" or (file_cm.split(\"-\")[2]==\"SCR\" and int(file_cm.split(\"-\")[1][-1]) in [2,3,4,5])):\n",
+        "      mismatch_channel_id = cm.nodes.index(\"J10-J11\")\n",
+        "      print(\"Mismatched node index:\", mismatch_channel_id)\n",
+        "      cm.X = exclude_from_sz_cm(cm.X, mismatch_channel_id)\n",
+        "      print(\"Check PREP file sets:\", list(cm.__dict__))\n",
+        "\n",
         "    print(\"\\nTotal number of epochs =\", len(cm.X))\n",
         "    print(\"Connectivity matrix shape =\", cm.X[0].shape)\n",
-        "\n",
+        "    print(\"All matrices have the same shape:\", all([m.shape==(len(nodes),len(nodes)) for m in cm.X]))\n",
         "    plt.figure(figsize=(5,5))\n",
         "    plt.imshow(cm.X[-1], cmap='Blues', interpolation='nearest')\n",
         "    plt.show()\n",
@@ -1188,16 +1258,23 @@
         "    print(f\"{len(base)} finished\")\n",
         "\n",
         "    base.sort(key=lambda x:x[-1], reverse=True)\n",
-        "    \n",
-        "    print(f\"Best node pair: {base[0][1]}\")\n",
+        "    best_pair = base[0]\n",
+        "    best_net = [best_pair]\n",
+        "    print(f\"Best node pair: {best_net}\")\n",
         "\n",
-        "    best_score, net_size, possible_node_groups, nets = base[0][-1], 3, base[:], []\n",
+        "    best_score, net_size, possible_node_groups, test_nets = base[0][-1], 3, base[:], []\n",
+        "    print(\"Best score =\", best_score)\n",
+        "\n",
+        "    all_node_groups = {} # This dictionary saves all tested node groups, under a key indicating net_size (number of grouped nodes) \n",
+        "    all_node_groups[2] = base\n",
         "\n",
         "    while net_size <= max_net_size:\n",
         "\n",
-        "        print(f\"Checking networks with {net_size} nodes...\")\n",
+        "        all_node_groups[net_size] = []\n",
         "\n",
-        "        head = check_until(possible_node_groups)\n",
+        "        print(f\"\\nChecking networks with {net_size} nodes...\")\n",
+        "\n",
+        "        head = check_until(possible_node_groups, fall=best_score)\n",
         "        tests = 0\n",
         "\n",
         "        for node_group in possible_node_groups[:head if head>0 else 1]:\n",
@@ -1208,37 +1285,50 @@
         "\n",
         "                    test_group = node_group[0] + (node,)\n",
         "\n",
-        "                    nets.append(evaluate_nodes(test_group, nodes, classify_epochs(cm, test_group)))\n",
+        "                    eval = evaluate_nodes(test_group, nodes, classify_epochs(cm, test_group))\n",
+        "\n",
+        "                    test_nets.append(eval)\n",
+        "                    all_node_groups[net_size].append(eval)\n",
         "\n",
         "                    tests += 1\n",
         "\n",
         "        print(f\"Tested {tests} node groups.\")\n",
         "\n",
-        "        nets.sort(key=lambda x:x[-1], reverse=True)\n",
+        "        test_nets.sort(key=lambda x:x[-1], reverse=True)\n",
+        "        all_node_groups[net_size].sort(key=lambda x:x[-1], reverse=True)\n",
         "\n",
-        "        print(f\"Best network: {nets[0][1]}\")\n",
+        "        evaluation_score = test_nets[0][-1]\n",
         "\n",
-        "        evaluation_score = nets[0][-1]\n",
+        "        print(f\"Best score for networks of size {net_size} =\", evaluation_score)\n",
+        "        print(f\"Best network of size {net_size}: {test_nets[0][1]}\")\n",
         "\n",
         "        if evaluation_score >= best_score:\n",
-        "\n",
+        "            \n",
         "            if net_size <= max_net_size:\n",
         "\n",
-        "                best_score = nets[0][-1]\n",
-        "                possible_node_groups = nets[:]\n",
-        "                nets = []\n",
-        "                               \n",
+        "                best_score = evaluation_score\n",
+        "                print(\"\\nNew best score =\", evaluation_score)\n",
+        "\n",
+        "                best_net = test_nets[:check_until(test_nets, fall=evaluation_score)]\n",
+        "                print(\"\\nNew best network =\", best_net)\n",
+        "\n",
+        "                possible_node_groups = test_nets[:]\n",
+        "                test_nets = []\n",
+        "                                \n",
         "            net_size += 1\n",
         "            \n",
-        "        else: break\n",
+        "        else: \n",
+        "          print(\"A better network not found.\")\n",
+        "          break\n",
         "\n",
-        "    selected_net = sorted(set([t for n in nets[:check_until(nets)] for t in n[1].split('<->')]))\n",
+        "    selected_net = sorted(set([t for n in best_net for t in n[1].split('<->')]))\n",
+        "\n",
         "\n",
         "    print(f\"\\nSelected network: {selected_net} ({len(selected_net)} nodes in total)\")\n",
         "\n",
         "\n",
-        "    file_net = file_cm.split(\".\")[1]\n",
-        "    rec(struct(base=base, nets=nets, nodes=selected_net)).save(path_net + f\"{file_net}.res\")"
+        "    file_net = file_cm.split(\".\")[0]\n",
+        "    REc(struct(test_nets=all_node_groups, nodes=selected_net)).save(path_net + f\"{file_net}.res\")"
       ]
     }
   ],
