--- a/notebooks/gcolab_find_en.ipynb
+++ b/notebooks/gcolab_find_en.ipynb
@@ -1048,6 +1048,7 @@
         "    Returns:\n",
         "        int: Index of net list.\n",
         "    \"\"\"\n",
+        "    print(\"Searching for the index of the last best network...\")\n",
         "    while set < len(net):\n",
         "        print(\"Net =\", net[:set])\n",
         "        print(\"Score =\", [n[at] for n in net[:set]][-1])\n",
@@ -1270,62 +1271,70 @@
         "\n",
         "    while net_size <= max_net_size:\n",
         "\n",
-        "        all_node_groups[net_size] = []\n",
+        "      all_node_groups[net_size] = []\n",
         "\n",
-        "        print(f\"\\nChecking networks with {net_size} nodes...\")\n",
+        "      print(f\"\\nChecking networks with {net_size} nodes...\")\n",
         "\n",
-        "        head = check_until(possible_node_groups, fall=best_score)\n",
-        "        tests = 0\n",
+        "      head = check_until(possible_node_groups, fall=best_score)\n",
+        "      count_node_groups = 0\n",
         "\n",
-        "        for node_group in possible_node_groups[:head if head>0 else 1]:\n",
+        "      for node_group in possible_node_groups[:head if head>0 else 1]:\n",
+        "          # Here, we iterate through the node groups with the highest score, as possibly there are more than one\n",
         "\n",
-        "            for node in node_ids:\n",
+        "          for node in node_ids:\n",
+        "            # All possible nodes are added to the group and tested\n",
         "\n",
-        "                if node not in node_group[0]:\n",
+        "            if node not in node_group[0]:\n",
+        "                # Avoiding duplicate nodes\n",
         "\n",
-        "                    test_group = node_group[0] + (node,)\n",
+        "                test_group = node_group[0] + (node,)\n",
         "\n",
-        "                    eval = evaluate_nodes(test_group, nodes, classify_epochs(cm, test_group))\n",
+        "                # Perform the classification between baseline and WOI epochs, using the support vector machine\n",
+        "                # Compute the cross-validation scores, using the K-Fold method\n",
+        "                # Apply the evaluation function to the cross-validation scores\n",
+        "                eval = evaluate_nodes(test_group, nodes, classify_epochs(cm, test_group))\n",
         "\n",
-        "                    test_nets.append(eval)\n",
-        "                    all_node_groups[net_size].append(eval)\n",
+        "                # Store the tested node groups in test_nets list and all_node_groups dictionary, under the net_size key\n",
+        "                test_nets.append(eval)\n",
+        "                all_node_groups[net_size].append(eval)\n",
         "\n",
-        "                    tests += 1\n",
+        "            count_node_groups += 1\n",
         "\n",
-        "        print(f\"Tested {tests} node groups.\")\n",
+        "      print(f\"Tested {count_node_groups} node groups.\")\n",
         "\n",
-        "        test_nets.sort(key=lambda x:x[-1], reverse=True)\n",
-        "        all_node_groups[net_size].sort(key=lambda x:x[-1], reverse=True)\n",
+        "      # Sort the latest networks by their score (indexed -1) and save the best evaluation score\n",
+        "      test_nets.sort(key=lambda x:x[-1], reverse=True)\n",
+        "      all_node_groups[net_size].sort(key=lambda x:x[-1], reverse=True)\n",
         "\n",
-        "        evaluation_score = test_nets[0][-1]\n",
+        "      evaluation_score = test_nets[0][-1]\n",
         "\n",
-        "        print(f\"Best score for networks of size {net_size} =\", evaluation_score)\n",
-        "        print(f\"Best network of size {net_size}: {test_nets[0][1]}\")\n",
+        "      print(f\"Best score for networks of size {net_size} =\", evaluation_score)\n",
+        "      print(f\"Best network of size {net_size}: {test_nets[0][1]}\")\n",
         "\n",
-        "        if evaluation_score >= best_score:\n",
-        "            \n",
-        "            if net_size <= max_net_size:\n",
+        "      if evaluation_score >= best_score:\n",
+        "          # If the new score is higher than the previous best score, \n",
+        "          # update the best score and the possible node groups for the next iteration\n",
+        "          if net_size <= max_net_size:\n",
         "\n",
-        "                best_score = evaluation_score\n",
-        "                print(\"\\nNew best score =\", evaluation_score)\n",
+        "              best_score = evaluation_score\n",
+        "              print(\"\\nNew best score =\", evaluation_score)\n",
         "\n",
-        "                best_net = test_nets[:check_until(test_nets, fall=evaluation_score)]\n",
-        "                print(\"\\nNew best network =\", best_net)\n",
+        "              best_net = test_nets[:check_until(test_nets, fall=evaluation_score)]\n",
+        "              print(\"\\nNew best network =\", best_net)\n",
         "\n",
-        "                possible_node_groups = test_nets[:]\n",
-        "                test_nets = []\n",
-        "                                \n",
-        "            net_size += 1\n",
-        "            \n",
-        "        else: \n",
-        "          print(\"A better network not found.\")\n",
-        "          break\n",
+        "              possible_node_groups = best_net\n",
+        "              test_nets = []\n",
+        "                              \n",
+        "          net_size += 1\n",
+        "          \n",
+        "      else: \n",
+        "        print(\"A better network not found.\")\n",
+        "        break\n",
         "\n",
         "    selected_net = sorted(set([t for n in best_net for t in n[1].split('<->')]))\n",
         "\n",
         "\n",
         "    print(f\"\\nSelected network: {selected_net} ({len(selected_net)} nodes in total)\")\n",
-        "\n",
         "\n",
         "    file_net = file_cm.split(\".\")[0]\n",
         "    REc(struct(test_nets=all_node_groups, nodes=selected_net)).save(path_net + f\"{file_net}.res\")"
