--- a/notebooks/find_en.ipynb
+++ b/notebooks/find_en.ipynb
@@ -7,12 +7,14 @@
    "outputs": [],
    "source": [
     "from src.eeg import struct\n",
-    "from src.core import REc as rec\n",
+    "from src.core import REc\n",
+    "from src.tools import exclude_from_sz_cm\n",
     "from src.game import classify_epochs, evaluate_nodes, check_until\n",
     "\n",
     "from itertools import combinations\n",
     "from os import listdir, makedirs\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from joblib import Parallel, delayed"
    ]
   },
   {
@@ -63,15 +65,29 @@
    "outputs": [],
    "source": [
     "for file_cm in listdir(path_cm):\n",
-    "    print(\"Processing...\")\n",
+    "  if file_cm.split(\"-\")[1]==woi_code[woi]:\n",
+    "\n",
+    "    print(\"\\n--------------------------------------------------------------\")\n",
+    "    print(\"\\nProcessing...\")\n",
+    "\n",
     "    subject_id = file_cm.split(\"/\")[-1][0:3]\n",
     "    print(\"Connectivity matrices of\", file_cm)\n",
     "\n",
-    "    cm = rec.load(path_cm + file_cm).data\n",
+    "    cm = REc.load(path_cm + file_cm).data\n",
+    "\n",
+    "    # For subject ASJ, for connectivity analysis using CC and SCR delta (WOI 2-5),\n",
+    "    # the seizure connectivity matrices have an extra channel that was not excluded;\n",
+    "    # The node was excluded from the labels list (nodes), therefore:\n",
+    "    # This block of code excludes the channel \"J9-J10\", with the index of the channel \"J10-J11\" in the current labels list.\n",
+    "    if subject_id==\"ASJ\" and (file_cm.split(\"-\")[2]==\"CC\" or (file_cm.split(\"-\")[2]==\"SCR\" and int(file_cm.split(\"-\")[1][-1]) in [2,3,4,5])):\n",
+    "      mismatch_channel_id = cm.nodes.index(\"J10-J11\")\n",
+    "      print(\"Mismatched node index:\", mismatch_channel_id)\n",
+    "      cm.X = exclude_from_sz_cm(cm.X, mismatch_channel_id)\n",
+    "      print(\"Check PREP file sets:\", list(cm.__dict__))\n",
     "\n",
     "    print(\"\\nTotal number of epochs =\", len(cm.X))\n",
     "    print(\"Connectivity matrix shape =\", cm.X[0].shape)\n",
-    "\n",
+    "    print(\"All matrices have the same shape:\", all([m.shape==(len(nodes),len(nodes)) for m in cm.X]))\n",
     "    plt.figure(figsize=(5,5))\n",
     "    plt.imshow(cm.X[-1], cmap='Blues', interpolation='nearest')\n",
     "    plt.show()\n",
@@ -92,57 +108,85 @@
     "    print(f\"{len(base)} finished\")\n",
     "\n",
     "    base.sort(key=lambda x:x[-1], reverse=True)\n",
-    "    \n",
-    "    print(f\"Best node pair: {base[0][1]}\")\n",
+    "    best_pair = base[0]\n",
+    "    best_net = [best_pair]\n",
+    "    print(f\"Best node pair: {best_net}\")\n",
     "\n",
-    "    best_score, net_size, possible_node_groups, nets = base[0][-1], 3, base[:], []\n",
+    "    best_score, net_size, possible_node_groups, test_nets = base[0][-1], 3, base[:], []\n",
+    "    print(\"Best score =\", best_score)\n",
+    "\n",
+    "    all_node_groups = {} # This dictionary saves all tested node groups, under a key indicating net_size (number of grouped nodes) \n",
+    "    all_node_groups[2] = base\n",
     "\n",
     "    while net_size <= max_net_size:\n",
     "\n",
-    "        print(f\"Checking networks with {net_size} nodes...\")\n",
+    "      all_node_groups[net_size] = []\n",
     "\n",
-    "        head = check_until(possible_node_groups)\n",
-    "        tests = 0\n",
+    "      print(f\"\\nChecking networks with {net_size} nodes...\")\n",
     "\n",
-    "        for node_group in possible_node_groups[:head if head>0 else 1]:\n",
+    "      head = check_until(possible_node_groups, fall=best_score)\n",
+    "      count_node_groups = 0\n",
     "\n",
-    "            for node in node_ids:\n",
+    "      for node_group in possible_node_groups[:head if head>0 else 1]:\n",
+    "          # Here, we iterate through the node groups with the highest score, as possibly there are more than one\n",
     "\n",
-    "                if node not in node_group[0]:\n",
+    "          for node in node_ids:\n",
+    "            # All possible nodes are added to the group and tested\n",
     "\n",
-    "                    test_group = node_group[0] + (node,)\n",
+    "            if node not in node_group[0]:\n",
+    "                # Avoiding duplicate nodes\n",
     "\n",
-    "                    nets.append(evaluate_nodes(test_group, nodes, classify_epochs(cm, test_group)))\n",
+    "                test_group = node_group[0] + (node,)\n",
     "\n",
-    "                    tests += 1\n",
+    "                # Perform the classification between baseline and WOI epochs, using the support vector machine\n",
+    "                # Compute the cross-validation scores, using the K-Fold method\n",
+    "                # Apply the evaluation function to the cross-validation scores\n",
+    "                eval = evaluate_nodes(test_group, nodes, classify_epochs(cm, test_group))\n",
     "\n",
-    "        print(f\"Tested {tests} node groups.\")\n",
+    "                # Store the tested node groups in test_nets list and all_node_groups dictionary, under the net_size key\n",
+    "                test_nets.append(eval)\n",
+    "                all_node_groups[net_size].append(eval)\n",
     "\n",
-    "        nets.sort(key=lambda x:x[-1], reverse=True)\n",
+    "            count_node_groups += 1\n",
     "\n",
-    "        print(f\"Best network: {nets[0][1]}\")\n",
+    "      print(f\"Tested {count_node_groups} node groups.\")\n",
     "\n",
-    "        evaluation_score = nets[0][-1]\n",
+    "      # Sort the latest networks by their score (indexed -1) and save the best evaluation score\n",
+    "      test_nets.sort(key=lambda x:x[-1], reverse=True)\n",
+    "      all_node_groups[net_size].sort(key=lambda x:x[-1], reverse=True)\n",
     "\n",
-    "        if evaluation_score >= best_score:\n",
+    "      evaluation_score = test_nets[0][-1]\n",
     "\n",
-    "            if net_size <= max_net_size:\n",
+    "      print(f\"Best score for networks of size {net_size} =\", evaluation_score)\n",
+    "      print(f\"Best network of size {net_size}: {test_nets[0][1]}\")\n",
     "\n",
-    "                best_score = nets[0][-1]\n",
-    "                possible_node_groups = nets[:]\n",
-    "                nets = []\n",
-    "                               \n",
-    "            net_size += 1\n",
-    "            \n",
-    "        else: break\n",
+    "      if evaluation_score >= best_score:\n",
+    "          # If the new score is higher than the previous best score, \n",
+    "          # update the best score and the possible node groups for the next iteration\n",
+    "          if net_size <= max_net_size:\n",
     "\n",
-    "    selected_net = sorted(set([t for n in nets[:check_until(nets)] for t in n[1].split('<->')]))\n",
+    "              best_score = evaluation_score\n",
+    "              print(\"\\nNew best score =\", evaluation_score)\n",
+    "\n",
+    "              best_net = test_nets[:check_until(test_nets, fall=evaluation_score)]\n",
+    "              print(\"\\nNew best network =\", best_net)\n",
+    "\n",
+    "              possible_node_groups = best_net\n",
+    "              test_nets = []\n",
+    "                              \n",
+    "          net_size += 1\n",
+    "          \n",
+    "      else: \n",
+    "        print(\"A better network not found.\")\n",
+    "        break\n",
+    "\n",
+    "    selected_net = sorted(set([t for n in best_net for t in n[1].split('<->')]))\n",
+    "\n",
     "\n",
     "    print(f\"\\nSelected network: {selected_net} ({len(selected_net)} nodes in total)\")\n",
     "\n",
-    "\n",
-    "    file_net = file_cm.split(\".\")[1]\n",
-    "    rec(struct(base=base, nets=nets, nodes=selected_net)).save(path_net + f\"{file_net}.res\")"
+    "    file_net = file_cm.split(\".\")[0]\n",
+    "    REc(struct(test_nets=all_node_groups, nodes=selected_net)).save(path_net + f\"{file_net}.res\")"
    ]
   }
  ],
