--- a/notebooks/gcolab_find_en.ipynb
+++ b/notebooks/gcolab_find_en.ipynb
@@ -1057,6 +1057,7 @@
         "            fall=score\n",
         "            set+=1\n",
         "        else: break\n",
+        "    print(f\"Last best network at index {set-1}\")\n",
         "    return set-1"
       ]
     },
