--- a/notebooks/gcolab_connectivity_matrices.ipynb
+++ b/notebooks/gcolab_connectivity_matrices.ipynb
@@ -1514,25 +1514,33 @@
       },
       "outputs": [],
       "source": [
+        "# TODO: The code below is not redundant, double check for each patient and create a redundant version\n",
+        "\n",
         "nodes_seizure = list(eeg_seizure.axes.region)\n",
         "nodes_baseline = list(eeg_baseline.axes.region)\n",
         "\n",
         "nodes=[]\n",
+        "missing_node_ids=[]\n",
+        "extra_nodes_in = None\n",
+        "\n",
         "if nodes_seizure==nodes_baseline: nodes = nodes_seizure\n",
         "else:\n",
-        "    missing_nodes=[]\n",
         "    if len(nodes_seizure)>len(nodes_baseline): \n",
+        "        extra_nodes_in = \"seizure\"\n",
         "        missing_nodes, nodes = [node for node in nodes_seizure if node not in nodes_baseline], nodes_seizure\n",
         "        for missing in missing_nodes: \n",
         "            print(f\"Node {missing} removed from seizure file as not present in baseline file.\")\n",
+        "            missing_node_ids.append(nodes.index(missing))\n",
         "            del nodes[nodes.index(missing)]\n",
         "            eeg_seizure.axes.region.remove(missing)\n",
         "    \n",
         "    elif len(nodes_seizure)<len(nodes_baseline): \n",
+        "        extra_nodes_in = \"baseline\"\n",
         "        missing_nodes, nodes = [node for node in nodes_baseline if node not in nodes_seizure], nodes_baseline\n",
         "        for missing in missing_nodes: \n",
         "            for missing in missing_nodes: \n",
         "                print(f\"Node {missing} removed from baseline file as not present in seizure file.\")\n",
+        "                missing_node_ids.append(nodes.index(missing))\n",
         "                del nodes[nodes.index(missing)]\n",
         "                eeg_baseline.axes.region.remove(missing)\n",
         "\n",
@@ -1839,7 +1847,7 @@
         "    cm._set(X = connectivity_analysis(fpp_seizure, spectral_coherence, fs=fpp_seizure[0].shape[1], imag=imag))\n",
         "\n",
         "elif method_code[method_idx] == \"PEC\": \n",
-        "    cm._set(X = [PEC(ep,i+1) for i,ep in enumerate(fpp_seizure)]) \n",
+        "    cm._set(X = [PEC(ep,i+1) for i,ep in enumerate(fpp_seizure)]))\n",
         "\n",
         "elif method_code[method_idx] in \"PLV\":\n",
         "    cm._set(X = connectivity_analysis(fpp_seizure, phaselock))\n",
@@ -1853,11 +1861,21 @@
         "elif method_code[method_idx] == \"PAC\":\n",
         "    cm._set(X = connectivity_analysis(fpp_seizure, PAC, True, fpp_seizure[0].shape[1]))\n",
         "\n",
+        "if extra_nodes_in is not None:\n",
+        "    for m in missing_node_ids:\n",
+        "        mismatch_channel_id = cm.nodes.index(m)\n",
+        "        print(\"Mismatched node index:\", mismatch_channel_id)\n",
+        "        if extra_nodes_in==\"seizure\":\n",
+        "            cm.X = exclude_from_sz_cm(cm.X, mismatch_channel_id)\n",
+        "\n",
         "plt.figure(figsize=(5,5))\n",
         "plt.imshow(cm.X[-1], cmap='Blues', interpolation='nearest')\n",
         "plt.title(\"Connectivity matrix example\")\n",
         "plt.show()\n",
-        "print(cm.X[-1])"
+        "print(cm.X[-1])\n",
+        "\n",
+        "print(\"Seizure CM shape =\", cm.X[0].shape)\n",
+        "print(\"Baseline CM shape =\", cm.X[-1].shape)"
       ]
     },
     {
