--- a/notebooks/gcolab_find_en.ipynb
+++ b/notebooks/gcolab_find_en.ipynb
@@ -1057,7 +1057,7 @@
         "            fall=score\n",
         "            set+=1\n",
         "        else: break\n",
-        "    print(f\"Last best network at index {set-1}\")\n",
+        "    print(f\"Last best network at index {set-2}\")\n",
         "    return set-1"
       ]
     },
@@ -1126,20 +1126,7 @@
       },
       "outputs": [],
       "source": [
-        "max_net_size = 20"
-      ]
-    },
-    {
-      "attachments": {},
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "#### The analysis pipeline.\n",
-        "##### The following code iterates through the files of the \"*connectivity_matrices*\" folder and loads the connectivity matrices of the WOI specified by the user. \n",
-        "###### The selected networks, based on the available connectivity measures, are saved as *rec* class objects in a subfolder called *selected_network*, as files with a custom extension (*RES*). \n",
-        "###### The filenames indicate the preprocessing parameters, matching the connectivity matrix filenames, as: \n",
-        "###### \"*SUB-preseizure5-CC-(70,180).res*\" if the signal was filtered, and\n",
-        "###### \"*SUB-preseizure5-PEC.res*\" if the signal was not filtered."
+        "max_net_size = 10"
       ]
     },
     {
@@ -1279,6 +1266,15 @@
         "      head = check_until(possible_node_groups, fall=best_score)\n",
         "      count_node_groups = 0\n",
         "\n",
+        "      if possible_node_groups[:head] == possible_node_groups: \n",
+        "        # This condition checks if all tested node groups have the same score (the best score);\n",
+        "        # if this is the case, we stop the process and save the selected network as all possible nodes.\n",
+        "        # We predited that this could occur in the seizure propagation time window, e.g.\n",
+        "        \n",
+        "        print(\"All nodes present the same connectivity change.\")\n",
+        "        selected_net = nodes\n",
+        "        break\n",
+        "\n",
         "      for node_group in possible_node_groups[:head if head>0 else 1]:\n",
         "          # Here, we iterate through the node groups with the highest score, as possibly there are more than one\n",
         "\n",
@@ -1318,9 +1314,10 @@
         "          if net_size <= max_net_size:\n",
         "\n",
         "              best_score = evaluation_score\n",
-        "              print(\"\\nNew best score =\", evaluation_score)\n",
+        "              print(\"\\nNew best score =\", best_score)\n",
         "\n",
-        "              best_net = test_nets[:check_until(test_nets, fall=evaluation_score)]\n",
+        "              head_i = check_until(test_nets, fall=best_score)\n",
+        "              best_net = test_nets[:head_i if head_i>0 else 1]\n",
         "              print(\"\\nNew best network =\", best_net)\n",
         "\n",
         "              possible_node_groups = best_net\n",
