--- a/notebooks/find_en.ipynb
+++ b/notebooks/find_en.ipynb
@@ -45,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "max_net_size = 20"
+    "max_net_size = 10"
    ]
   },
   {
@@ -75,6 +75,11 @@
     "\n",
     "    cm = REc.load(path_cm + file_cm).data\n",
     "\n",
+    "    nodes = cm.nodes\n",
+    "    node_ids = list(range(len(nodes))) \n",
+    "    print(\"Number of nodes =\",len(nodes))\n",
+    "    print(\"\\nNodes:\", nodes)\n",
+    "\n",
     "    # For subject ASJ, for connectivity analysis using CC and SCR delta (WOI 2-5),\n",
     "    # the seizure connectivity matrices have an extra channel that was not excluded;\n",
     "    # The node was excluded from the labels list (nodes), therefore:\n",
@@ -92,11 +97,6 @@
     "    plt.imshow(cm.X[-1], cmap='Blues', interpolation='nearest')\n",
     "    plt.show()\n",
     "    print(cm.X[-1])\n",
-    "\n",
-    "    nodes = cm.nodes\n",
-    "    node_ids = list(range(len(nodes))) \n",
-    "    print(\"Number of nodes =\",len(nodes))\n",
-    "    print(\"\\nNodes:\", nodes)\n",
     "\n",
     "    node_pairs = combinations(node_ids, 2)\n",
     "\n",
@@ -126,6 +126,15 @@
     "\n",
     "      head = check_until(possible_node_groups, fall=best_score)\n",
     "      count_node_groups = 0\n",
+    "\n",
+    "      if possible_node_groups[:head] == possible_node_groups: \n",
+    "        # This condition checks if all tested node groups have the same score (the best score);\n",
+    "        # if this is the case, we stop the process and save the selected network as all possible nodes.\n",
+    "        # We predited that this could occur in the seizure propagation time window, e.g.\n",
+    "        \n",
+    "        print(\"All nodes present the same connectivity change.\")\n",
+    "        selected_net = nodes\n",
+    "        break\n",
     "\n",
     "      for node_group in possible_node_groups[:head if head>0 else 1]:\n",
     "          # Here, we iterate through the node groups with the highest score, as possibly there are more than one\n",
