--- a/notebooks/gcolab_find_en.ipynb
+++ b/notebooks/gcolab_find_en.ipynb
@@ -1113,9 +1113,9 @@
         "id": "T7MD6TRL7cik"
       },
       "source": [
-        "#### Next, we introduce a limitation to the maximum network size (node number) with the purpose of avoiding seizure-propagating networks.\n",
+        "#### Next, we introduce a limitation to the maximum network size (node number) with the purpose of avoiding long processing times. The selected networks are considered too large if the node number is higher than the number of nodes within the surgical resection in patients with good surgical outcome. In patients with poor surgical outcome, the networks are considered too large if the number of nodes exceeds an arbitrary number, which we defined to be 10.\n",
         "##### The propagatory networks contain nodes which hypersynchronize secondarily when a seizure starts, but are not part of the epileptogenic network. For generalized seizures, e.g., the classification between baseline and WOI of seizure propagation would be highly accurate for all possible nodes.\n",
-        "##### In this case, the algorithm will keep on adding nodes and the resulting network will ultimately contain all possible nodes. Finding such a network is not useful for improving identificatio nof surgical targets.\n"
+        "##### In this case, the algorithm will keep on adding nodes and the resulting network will ultimately contain all possible nodes. This justifies introducing a limitation to the network size, as finding such a network is not useful for improving identification of surgical targets.\n"
       ]
     },
     {
@@ -1126,7 +1126,7 @@
       },
       "outputs": [],
       "source": [
-        "max_net_size = 10"
+        "max_net_size = 18 "
       ]
     },
     {
@@ -1202,6 +1202,7 @@
         "from os import listdir\n",
         "import matplotlib.pyplot as plt\n",
         "from joblib import Parallel, delayed\n",
+        "import random as rd\n",
         "\n",
         "for file_cm in listdir(path_cm):\n",
         "  if file_cm.split(\"-\")[1]==woi_code[woi]:\n",
@@ -1213,6 +1214,11 @@
         "    print(\"Connectivity matrices of\", file_cm)\n",
         "\n",
         "    cm = REc.load(path_cm + file_cm).data\n",
+        "\n",
+        "    nodes = cm.nodes\n",
+        "    node_ids = list(range(len(nodes))) \n",
+        "    print(\"Number of nodes =\",len(nodes))\n",
+        "    print(\"\\nNodes:\", nodes)\n",
         "\n",
         "    # For subject ASJ, for connectivity analysis using CC and SCR delta (WOI 2-5),\n",
         "    # the seizure connectivity matrices have an extra channel that was not excluded;\n",
@@ -1231,11 +1237,6 @@
         "    plt.imshow(cm.X[-1], cmap='Blues', interpolation='nearest')\n",
         "    plt.show()\n",
         "    print(cm.X[-1])\n",
-        "\n",
-        "    nodes = cm.nodes\n",
-        "    node_ids = list(range(len(nodes))) \n",
-        "    print(\"Number of nodes =\",len(nodes))\n",
-        "    print(\"\\nNodes:\", nodes)\n",
         "\n",
         "    node_pairs = combinations(node_ids, 2)\n",
         "\n",
@@ -1266,16 +1267,26 @@
         "      head = check_until(possible_node_groups, fall=best_score)\n",
         "      count_node_groups = 0\n",
         "\n",
+        "      # The condition below checks if all tested node groups have the same score (the best score);\n",
+        "      # if this is the case, we stop the process and save the selected network as all possible nodes.\n",
+        "      # We predited that this could occur in the seizure propagation time window, e.g.\n",
         "      if possible_node_groups[:head] == possible_node_groups: \n",
-        "        # This condition checks if all tested node groups have the same score (the best score);\n",
-        "        # if this is the case, we stop the process and save the selected network as all possible nodes.\n",
-        "        # We predited that this could occur in the seizure propagation time window, e.g.\n",
-        "        \n",
-        "        print(\"All nodes present the same connectivity change.\")\n",
+        "\n",
+        "        print(\"All possible networks present the best score.\")\n",
         "        selected_net = nodes\n",
         "        break\n",
         "\n",
-        "      for node_group in possible_node_groups[:head if head>0 else 1]:\n",
+        "      # In case there not all, but many network with the best score, the processing time could become impractical;\n",
+        "      # to bypass this, we define a limit of maximally considered number of top networks as the *max_net_size* parameter.\n",
+        "      # (If the selected network is much larger than the actual resection in good outcome patients, the result is useless.)\n",
+        "      # Thus, among the top networks, a number equal to *max_net_size* of randomly picked networks are selected for the next iteration.\n",
+        "      possible_node_groups = possible_node_groups[:head if head>0 else 1]\n",
+        "      if len(possible_node_groups) >= max_net_size: \n",
+        "\n",
+        "        print(f\"More than {max_net_size} networks present the best score. Randomly selecting {max_net_size} networks from the pool.\")\n",
+        "        possible_node_groups = rd.sample(possible_node_groups, max_net_size)\n",
+        "\n",
+        "      for node_group in possible_node_groups:\n",
         "          # Here, we iterate through the node groups with the highest score, as possibly there are more than one\n",
         "\n",
         "          for node in node_ids:\n",
@@ -1296,6 +1307,8 @@
         "                all_node_groups[net_size].append(eval)\n",
         "\n",
         "            count_node_groups += 1\n",
+        "\n",
+        "\n",
         "\n",
         "      print(f\"Tested {count_node_groups} node groups.\")\n",
         "\n",
