--- a/notebooks/gcolab_connectivity_matrices.ipynb
+++ b/notebooks/gcolab_connectivity_matrices.ipynb
@@ -1299,6 +1299,44 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from numpy import delete\n",
+        "\n",
+        "def exclude_from_cm(cm, channel_id):\n",
+        "    \"\"\"Excludes a node from a connectivity matrix.\n",
+        "    Arguments:\n",
+        "        cm (numpy array): 2D matrix with connectivity measures between all node pairs\n",
+        "        channel_id (int or list): index of the node to be removed\n",
+        "    Returns the updated matrix.\n",
+        "    \"\"\"\n",
+        "    cm = delete(cm, channel_id, 0)\n",
+        "    cm = delete(cm, channel_id, 1)\n",
+        "    return cm\n",
+        "\n",
+        "def exclude_from_sz_cm(cm_list, channel_id):\n",
+        "    \"\"\"Excludes a node from connectivity matrices of seizure epochs.\n",
+        "    Arguments:\n",
+        "        cm_list (list of numpy arrays): list of connectivity matrices saved in the PREP file under X;\n",
+        "                                        First half of the matrices are from seizure epochs, second half form basleine epochs.\n",
+        "        channel_id (int or list): index of the node to be removed\n",
+        "    Returns the updated list of matrices.\n",
+        "    \"\"\"\n",
+        "    result = []\n",
+        "    for i,cm in enumerate(cm_list):\n",
+        "      if i<(len(cm_list)/2):\n",
+        "        # Exclude the node only from seizure matrices, which are set as the first half in the list\n",
+        "        cm = exclude_from_cm(cm, channel_id)\n",
+        "        result.append(cm)\n",
+        "      else:\n",
+        "        result.append(cm)\n",
+        "    return result"
+      ]
+    },
+    {
       "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
